# agent-security-eval

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: reference-reuse-analysis.md
docs/adr/: 0001-clean-project-reset.md  0002-offline-import-native-runtime.md
docs/architecture/: README.md  reference-informed-options.md  reference-reuse-audit.md  scenario-data-assets-v1.1.md
docs/development/: ac-asset-ingestion-spike.md  importer-spike-plan.md  m0-a-inspect-validation.md  m0-b-pyrit-scorer-validation.md  m0-c-pyrit-policy-validation.md  m0-closeout.md  roadmap.md
docs/reference-assets/: ac-source-inventory.md
docs/superpowers/audits/: 2026-07-17-m0-c-docs-against-code.md  2026-07-17-m1-architecture-alignment.md
docs/superpowers/goals/: 2026-07-16-m0-a-inspect-execution-validation-goal.md  2026-07-17-m0-b-pyrit-scorer-validation-goal.md  2026-07-17-m0-c-pyrit-policy-embedding-goal.md  2026-07-17-m1-architecture-alignment-goal.md
docs/superpowers/plans/: 2026-07-16-m0-a-inspect-execution-validation.md  2026-07-17-ac-full-asset-catalog-implementation.md  2026-07-17-m0-b-pyrit-scorer-validation.md  2026-07-17-m0-c-pyrit-policy-embedding.md  2026-07-21-m1a-native-scenario-assets.md
docs/superpowers/specs/: 2026-07-16-m0-a-inspect-execution-validation-design.md  2026-07-17-ac-full-asset-catalog-design.md  2026-07-17-m0-b-pyrit-scorer-validation-design.md  2026-07-17-m0-c-pyrit-policy-embedding-design.md
docs/superpowers/tdd/: 2026-07-16-m0-a-inspect-execution-validation.md  2026-07-17-m0-b-pyrit-scorer-validation.md  2026-07-17-m0-c-pyrit-policy-embedding.md
experiments/inspect-execution-model/: README.md  spike.py
references/: manifest.yaml
references/import-selection/: ac-seed-selection.yaml
references/source-locks/: ac-reference-sources.yaml
src/agentsec_eval/: __init__.py
src/agentsec_eval/assertions/: __init__.py  final.py  progress.py
src/agentsec_eval/domain/: __init__.py  models.py
src/agentsec_eval/execution/: __init__.py  (+2 more)
tests/: test_smoke.py
(+85 files in other folders)
