[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-security-eval"
version = "0.1.0"
description = "Infrastructure for executable security evaluation and fuzzing of tool-using AI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "inspect-ai==0.3.246",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
pyrit = [
  "pyrit==0.14.0",
]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentsec_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "docker: requires a working local Docker daemon and Docker Compose",
  "integration: exercises multiple project or runtime boundaries",
  "pyrit: requires the optional PyRIT integration dependencies",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
exclude = [
  "src/agentsec_eval/integrations/pyrit",
  "tests/unit/integrations/pyrit",
  "tests/integration/m0b",
]
